# advent-of-code

./: .cruft.json  README-Copy1.md  SECURITY.md  pyproject.toml
Advent of Code 2022/: Test.py  fotball-vm_simuleringer.ipynb
Advent of Code 2022/011222/: python.ipynb  testpandas.ipynb  testpandas.py
Advent of Code 2022/021222/: 02.ipynb  02.py
Advent of Code 2022/031222/: 03.ipynb
Advent of Code 2022/041222/: 04.ipynb
Advent of Code 2022/051222/: 05.ipynb  05.py
Advent of Code 2022/061222/: 06.ipynb
Advent of Code 2022/071222/: 07.ipynb
Advent of Code 2022/081222/: 08.ipynb  08.py
Advent of Code 2022/091222/: 09.ipynb
Advent of Code 2022/101222/: 10.ipynb  10.py
Advent of Code 2022/111222/: 11.ipynb  11.py  data.txt
Advent of Code 2022/121222/: 12.ipynb  test2.txt
Advent of Code 2022/131222/: 13.ipynb
Advent of Code 2022/141222/: 00.ipynb  00.py
Advent of Code 2022/Folder template copy 3/: 00.ipynb
Advent of Code 2023/010123/: solution.py
Advent of Code 2023/021223/: solution.py
Advent of Code 2023/041223/: solution.py
Advent of Code 2023/051223/: solution.py
Advent of Code 2023/061223/: solution.py
Advent of Code 2023/071223/: solution.py
Advent of Code 2023/081223/: solution.py
Advent of Code 2023/091223/: solution.py
Advent of Code 2023/101223/: solution.py
Advent of Code 2023/111223/: data2.txt  solution.py
Advent of Code 2023/121223/: solution.py
Advent of Code 2023/131223/: solution.py
Advent of Code 2023/161223/: data2.txt  solution.py
aoc_2022/: fotball-vm_simuleringer.py
aoc_2022/011222/: python.py
(+44 files in other folders)
